# create3_sim

create3_walk_msgs/: CMakeLists.txt  package.xml
create3_walk_msgs/action/: Walk.action
irobot_create_common/irobot_create_common_bringup/config/create3/: hazard_vector_params.yaml  ir_intensity_vector_params.yaml  kidnap_estimator_params.yaml  mock_params.yaml  robot_state_params.yaml  ui_mgr_params.yaml  wheel_status_params.yaml
irobot_create_common/irobot_create_common_bringup/config/robot_1/: hazard_vector_params.yaml  ir_intensity_vector_params.yaml  kidnap_estimator_params.yaml  mock_params.yaml  robot_state_params.yaml  ui_mgr_params.yaml  wheel_status_params.yaml
irobot_create_common/irobot_create_common_bringup/launch/: create3_nodes.launch.py  dock_description.launch.py  robot_description.launch.py
irobot_create_common/irobot_create_control/config/: create3.yaml  robot_1.yaml
irobot_create_common/irobot_create_control/launch/include/: control.py
irobot_create_common/irobot_create_description/urdf/: bumper.urdf.xacro  create3.urdf.xacro  wheel_drop.urdf.xacro
irobot_create_common/irobot_create_description/urdf/sensors/: cliff_sensor.urdf.xacro  imu.urdf.xacro  ir_intensity.urdf.xacro  ir_opcode_receivers.urdf.xacro
irobot_create_common/irobot_create_nodes/src/: motion_control_node.cpp  robot_state.cpp  ui_mgr.cpp
irobot_create_gazebo/irobot_create_gazebo_bringup/launch/: create3_gazebo.launch.py  create3_gazebo_spawn.launch.py  create3_spawn.launch.py
irobot_create_gazebo/irobot_create_gazebo_plugins/include/irobot_create_gazebo_plugins/: docking_manager.hpp  gazebo_ros_bumper.hpp
irobot_create_gazebo/irobot_create_gazebo_plugins/src/: docking_manager.cpp  gazebo_ros_bumper.cpp  gazebo_ros_docking_status.cpp  gazebo_ros_ir_intensity_sensor.cpp  gazebo_ros_ir_opcode.cpp
irobot_create_multi/: CMakeLists.txt  README.md  package.xml
irobot_create_multi/include/irobot_create_multi/: create3_walk_node.hpp  simple_robot_move.hpp  simple_robot_move_node.hpp  state.hpp  undock_behavior.hpp  walk_state_machine.hpp
irobot_create_multi/include/irobot_create_multi/behaviors/: behavior.hpp  dock-behavior.hpp  drive-straight-behavior.hpp  estop-behavior.hpp  nav-behavior.hpp  reflex-behavior.hpp  rotate-behavior.hpp  undock-behavior.hpp
irobot_create_multi/launch/: create3_gazebo.launch.py  create3_spawn.launch.py
irobot_create_multi/src/: create3_walk_node.cpp  main.cpp  simple_robot_move_node.cpp  undock_behavior.cpp  walk_state_machine.cpp
irobot_create_multi/src/behaviors/: dock-behavior.cpp  drive-straight-behavior.cpp  estop-behavior.cpp  nav-behavior.cpp  reflex-behavior.cpp  rotate-behavior.cpp  undock-behavior.cpp  utils.cpp  utils.hpp
irobot_create_multi/world/: square.sdf
